# skills

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json
apply-wishket-workspace/iteration-3/eval-batch/: eval_metadata.json
apply-wishket-workspace/iteration-3/eval-single-high/: eval_metadata.json
apply-wishket-workspace/iteration-3/eval-single-low/: eval_metadata.json
apply-wishket-workspace/skill-snapshot-iter3/evals/: evals.json
docs/: BACKLOG.md  reliability-system.md  skill-hygiene.md
docs/briefings/: 2026-06-13-engine-hardening.md
plugins/dev-toolkit/.claude-plugin/: plugin.json
plugins/slice/: agents
skills/apply-wishket/: SKILL.md
skills/build-config-drift/: SKILL.md
skills/code-fundamentals/: SKILL.md  code-review-orchestrator.js  code-review-orchestrator.smoke.mjs
skills/commit-pr-checklist/: SKILL.md
skills/fact-check/: SKILL.md
skills/human-like-browser/: SKILL.md
skills/issue-rootcause-workflow/: SKILL.md
skills/slice/: SKILL.md  package.json  recursive-slice.js  tsconfig.json  tsup.config.ts
skills/spec-first/: SKILL.md
skills/tailor-resume/: SKILL.md
skills/technical-writing/: SKILL.md
skills/test-foundations/: SKILL.md
skills/test-foundations/evals/fixtures/eval-python/: .gitignore  calc.py  pyproject.toml
skills/test-foundations/evals/fixtures/eval-python/tests/: test_calc.py
skills/toss-frontend-fundamentals/: SKILL.md
skills/ux-writing/: SKILL.md
(+228 files in other folders)
